# simple-qt-plugin

./: .gitignore
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cc  thread_interface.h  widget_interface.h
src/plugins/: CMakeLists.txt
src/plugins/plugin_thread/: CMakeLists.txt  plugin_thread.cc  plugin_thread.h
src/plugins/plugin_widget/: CMakeLists.txt  plugin_widget.cc  plugin_widget.h
